[package]
name = "othello-api"
version = "0.1.0"
edition = "2024"

[dependencies]
othello = { path = "../othello" }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"] }
rand = "0.9.2"
axum-extra = { version = "0.12.2", features = ["cookie"] }
uuid = { version= "1.18.1", features = ["v4"] }
regex = "1.12.2"
time = { version = "0.3.44", features = ["serde"] }
posthog-rs = "0.3.7"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-axiom = "0.7"
