[package]
name = "othello-self-play"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["cuda", "ndarray"] }
othello = { path = "../othello" }
rand = "0.9.2"
ndarray = "0.16.1"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
tempfile = "3.23.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [ "env-filter", "fmt" ] }
rayon = "1.11.0"
