[package]
name = "othello-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
othello = { path = "../othello" }
othello-mcts = { path = "../othello-mcts" }
wasm-bindgen = "0.2.105"
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.58"
burn = { git = "https://github.com/tracel-ai/burn", features = ["ndarray", "webgpu"] }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["std", "burnpack"] }
tracing = "0.1.44"
wasm-tracing = "2.1.0"
console_error_panic_hook = "0.1.7"
# https://github.com/rust-random/getrandom/#webassembly-support
getrandom = { version = "0.3.4", default-features = false, features = [
    "wasm_js",
] }

[build-dependencies]
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx" }
